Fix: Edición de Habilidades y Periodos
Se solucionó un problema que permitía editar las habilidades y los periodos con valores incorrectos.

--- a/gestion_voluntarios/view/voluntario_home_view.html
+++ b/gestion_voluntarios/view/voluntario_home_view.html
@@ -154,7 +154,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <span class="mb-3">Seleccione una o varias habilidades nuevas:</span><br>
+                    <span class="mb-3">Seleccione una habilidad:</span><br>
                     <div class="cs-form">
                         <label for="titulo_habilidad" class="form-label">Habilidad:</label>
                         <select id="titulo_habilidad" name="titulo_habilidad" class="form-select" aria-label="Habilidad" style="margin: 0 5px">
