--- a/gestion_voluntarios/view/priorizar_voluntario.html
+++ b/gestion_voluntarios/view/priorizar_voluntario.html
@@ -6,65 +6,65 @@
     <meta charset="UTF-8">
     <title>Priorizar Test View</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- Bootstrap Font Icon CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- My Styles -->
     <link rel="stylesheet" href="{% static 'voluntario_styles.css' %}">
 </head>
-<body>
-
-    <div class = "container">
-        <h1>Voluntarios Confirmados</h1>
-        <p>Seleccione la habilidad requerida</p>
-        <form method="post" action="{% url 'procesar_formulario' %}">
-        {% csrf_token %}
-            <div class="form-group">
-                <label for="habilidad">Habilidad:</label>
-
-                <select name = "habilidad" class="form-control" id="habilidad">
-                    {% for habilida in emergencia  %}
-                        <option value="{{ habilida.habilidad_requerida }}">{{ habilida.habilidad_requerida }}</option>
-                    {% endfor %}
-                </select>
-
-            </div>
-            <input type="hidden" name="mi_lista" value="{{ emergencia.lista }}">
-            <button type="submit" class="btn btn-primary">Priorizar</button>
-        </form>
-        <hr>
-        <h2>Resultados</h2>
-        <table class="table">
-            <thead>
+<body >
+<div>
+    <h1 class="ms-2">Voluntarios Priorizados</h1>
+    <hr>
+    <h2 class="ms-2">Emergencias</h2>
+    <table class="table container">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Habilidad Requerida</th>
+            <th>Vacantes</th>
+            <th>Voluntarios</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for emergencia in emergencias %}
             <tr>
-                <th>Nombre</th>
-                <th>Apellido</th>
-                <th>Edad</th>
+                <td>{{ emergencia.id }}</td>
+                <td>{{ emergencia.nombre }}</td>
+                <td>{{ emergencia.habilidad_requerida }}</td>
+                <td>{{ emergencia.vacantes }}</td>
+                <td>
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>Nombres</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for voluntario in voluntarios %}
+                            {% for nom in voluntario %}
+                                {% if nom.emergencia.id == emergencia.id %}
+                                    <tr>
+                                        <td>{{ nom.nombre }} {{ nom.apellido }} <br>
+                                            <input class="btn btn-primary" type="button" value="Asignar actividad">
+                                        </td>
+                                    </tr>
+                                {% endif %}
+                            {% endfor %}
+                        {% endfor %}
+
+                        </tbody>
+                    </table>
+                </td>
             </tr>
-            </thead>
-            <tbody>
-            {% for voluntario in voluntario %}
-
-            <tr>
-                <td>{{ voluntario.nombre}}</td>
-                <td>{{ voluntario.apellido }}</td>
-                <td>{{ voluntario.edad }}</td>
-            </tr>
-
-            {%endfor%}
-
-            </tbody>
-        </table>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-    <script>
-
-    </script>
-
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
