--- a/gestion_voluntarios/static/notificacion_styles.css
+++ b/gestion_voluntarios/static/notificacion_styles.css
@@ -30,24 +30,21 @@ li {
 
 button {
     background-color: #dd0000;
-    border: none;
+    border-radius: 20px;
     color: #fff;
     font-size: 16px;
     font-weight: bold;
     padding: 10px 20px;
-    border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .conf {
-    background-color: chartreuse;
+    background-color: rgb(111, 219, 2);
 }
-
+.rech {
+    background-color: #d80000;
+}
 button:hover {
     background-color: #0020c3;
-}
-
-button:active {
-    background-color: #b30000;
 }
