--- a/gestion_voluntarios/static/templates/gestion_voluntarios/notificacion.html
+++ b/gestion_voluntarios/static/templates/gestion_voluntarios/notificacion.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="notificacion.css">
+    <link rel="stylesheet" href="../../notificacion_styles.css">
     <title>Notificación de emergencia médica</title>
 </head>
 <body>
