--- a/gestion_voluntarios/view/voluntario_home_view.html
+++ b/gestion_voluntarios/view/voluntario_home_view.html
@@ -259,7 +259,10 @@
         </div>
       </div>
     </div>
-
+    <div class="modal-footer">
+        <button type="submit" class="btn btn-primary">Ver notificaciones</button>
+        <input type="hidden" id="operacion" name="operacion" value="ver_notificaciones">
+    </div>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
