--- a/gestion_voluntarios/view/priorizar_voluntario.html
+++ b/gestion_voluntarios/view/priorizar_voluntario.html
@@ -11,19 +11,23 @@
     <!-- My Styles -->
     <link rel="stylesheet" href="{% static 'voluntario_styles.css' %}">
 </head>
-<body >
+<body>
 <div>
-    <h1 class="ms-2">Voluntarios Priorizados</h1>
-    <hr>
-    <h2 class="ms-2">Emergencias</h2>
-    <table class="table container">
-        <thead>
+    <div class="bg-dark">
+        <h1 class="ms-2 text-white">Voluntarios priorizados</h1>
+    </div>
+    <div class="d-flex justify-content-between bg-dark mb-4">
+        <h2 class="m-4 text-white">Listado de emergencias</h2>
+        <input class="btn rounded btn-primary m-4" type="button" value="Asignar actividades">
+    </div>
+    <table class="table table-light container">
+        <thead class="table-dark">
         <tr>
             <th>ID</th>
             <th>Nombre</th>
-            <th>Habilidad Requerida</th>
+            <th>Habilidad requerida</th>
             <th>Vacantes</th>
-            <th>Voluntarios</th>
+            <th>Lista de voluntarios priorizado</th>
         </tr>
         </thead>
         <tbody>
@@ -35,21 +39,29 @@
                 <td>{{ emergencia.vacantes }}</td>
                 <td>
                     <table class="table">
-                        <thead>
+                        <thead class="table-active">
                         <tr>
-                            <th>Nombres</th>
-
+                            <th class="col-2">Voluntario</th>
+                            <th class="col-2">Habilidad</th>
+                            <th class="col-2">Horas de experiencia</th>
                         </tr>
                         </thead>
                         <tbody>
                         {% for voluntario in voluntarios %}
-                            {% for nom in voluntario %}
-                                {% if nom.emergencia.id == emergencia.id %}
-                                    <tr>
-                                        <td>{{ nom.nombre }} {{ nom.apellido }} <br>
-                                            <input class="btn btn-primary" type="button" value="Asignar actividad">
-                                        </td>
-                                    </tr>
+                            {% for v in voluntario %}
+                                {% if v.emergencia.id == emergencia.id %}
+                                    {% for habilidad in habilidades %}
+                                        {% for h in habilidad %}
+                                            {% if v.id == h.voluntario.id %}
+                                                <tr>
+                                                    <td>{{ v.nombre }} {{ v.apellido }}</td>
+                                                    <td>{{ h.titulo }}</td>
+                                                    <td>{{ h.horas_experiencia }}</td>
+
+                                                </tr>
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% endfor %}
                                 {% endif %}
                             {% endfor %}
                         {% endfor %}
