fix: notificacion_controller

--- a/gestion_voluntarios/static/emergencia_style.css
+++ b/gestion_voluntarios/static/emergencia_style.css
@@ -61,7 +61,7 @@ textarea {
 
 input[type="submit"] {
     color: white;
-    background: #009688;
+    background: #0D6EFD;
     font-size: 19px;
     width: calc(100% + 100%);
     margin-left: 8px;
