--- a/gestion_voluntarios/view/notificacion.html
+++ b/gestion_voluntarios/view/notificacion.html
@@ -1,48 +1,34 @@
 {% load static %}
 {% block content %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Notificación de emergencia médica</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
-    <!-- Bootstrap Font Icon CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <!-- My Styles -->
-    <link rel="stylesheet" href="{% static 'notificacion_styles.css' %}">
-</head>
-<body>
-    <table>
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Edad</th>
-            <th>Estado</th>
-            <th>Es_Asignado</th>
-            <th>Emergencia_ID</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for voluntario in voluntarios %}
-            <tr>
-                <td>{{ voluntario.id }}</td>
-                <td>{{ voluntario.nombre }}</td>
-                <td>{{ voluntario.apellido }}</td>
-                <td>{{ voluntario.edad }}</td>
-                <td>{{ voluntario.estado }}</td>
-                <td>{{ voluntario.es_asignado }}</td>
-                <td>{{ voluntario.emergencia_id }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <!doctype html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Notificación de emergencia médica</title>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+              crossorigin="anonymous">
+        <!-- Bootstrap Font Icon CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+        <!-- My Styles -->
+        <link rel="stylesheet" href="{% static 'notificacion_styles.css' %}">
+    </head>
+    <body>
+    <div class="notification">
+        {{ nombre }}
+        <h1>EMERGENCIA MÉDICA</h1>
+        <p>La emergencia: {{ em.nombre }}</p>
+        <p>Estimad@ {{ vol.nombre }}</p>
+        <p>SELECCIONE UNA OPCIÓN</p>
+        <form method="post">
+            <!--{% csrf_token %}-->
+            <button type="submit" name="opcion" class="conf" value="confirmar">Confirmar</button>
+            <button type="submit" name="opcion" class="rech" value="rechazar">Rechazar</button>
+        </form>
 
-</body>
-</html>
+    </div>
+    </body>
+    </html>
 {% endblock %}
