--- a/gestion_voluntarios/view/priorizar_voluntario.html
+++ b/gestion_voluntarios/view/priorizar_voluntario.html
@@ -18,7 +18,7 @@
     </div>
     <div class="d-flex justify-content-between bg-dark mb-4">
         <h2 class="m-4 text-white">Listado de emergencias</h2>
-        <input class="btn rounded btn-primary m-4" type="button" value="Asignar actividades">
+        <input class="btn rounded btn-primary m-4" type="button" value="Asignar actividades" onclick="location.href='actividad'">
     </div>
     <table class="table table-light table-bordered table-hover container table-striped">
         <thead class="table-dark">
