--- a/gestion_voluntarios/view/notificacion.html
+++ b/gestion_voluntarios/view/notificacion.html
@@ -17,15 +17,19 @@
     </head>
     <body>
     <div class="notification">
-        {{ nombre }}
         <h1>EMERGENCIA MÉDICA</h1>
-        <p>La emergencia: {{ em.nombre }}</p>
-        <p>Estimad@ {{ vol.nombre }}</p>
-        <p>SELECCIONE UNA OPCIÓN</p>
-        <form method="post">
-            <!--{% csrf_token %}-->
-            <button type="submit" name="opcion" class="conf" value="confirmar">Confirmar</button>
-            <button type="submit" name="opcion" class="rech" value="rechazar">Rechazar</button>
+        <b>{{ emergencia.nombre }}</b>
+        <br>
+        Asunto: {{ emergencia.asunto}}
+        <br>
+        Dirección: {{ emergencia.ubicacion }}
+        <form method="post" action="{% url 'voluntario' %}?id_voluntario=4">
+            {% csrf_token %}
+            <input type="hidden" id="id_voluntario" name="id_voluntario" value="{{ voluntario.id }}">
+            <input type="hidden" id="confirmacion" name="confirmacion" value="confirmar">
+            <button type="submit" name="confirmacion" class="conf" value="confirmar">Confirmar</button>
+            <input type="hidden" id="rechazo" name="rechazo" value="rechazar">
+            <button type="submit" name="rexhazo" class="rech" value="rechazar">Rechazar</button>
         </form>
 
     </div>
