--- a/gestion_voluntarios/static/notificacion_styles.css
+++ b/gestion_voluntarios/static/notificacion_styles.css
@@ -1,50 +1,39 @@
-body {
-    background-color: #f7f7f7;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-}
+.notification {
+    width: 400px; /* Ajusta el ancho según tus necesidades */
+    margin: 20px auto 0;/* Centra el div en la página */
+    text-align: center; /* Centra el contenido dentro del div */
+    background-color: #E0FFFF;
+    border: 2px solid #87CEEB;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #87CEEB;
+    padding: 20px;
+  }
 
-h1 {
-    font-size: 28px;
-    font-weight: bold;
-    color: #dd0000;
-    margin-top: 20px;
-    margin-bottom: 10px;
-}
+  .button-container {
+      display: flex;
+      margin-top: 10px;
+      justify-content: space-evenly;
+  }
 
-p {
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-
-ul {
-    margin-top: 0;
-    margin-bottom: 20px;
-    list-style-type: none;
-    padding-left: 0;
-}
-
-li {
-    margin-bottom: 5px;
-}
-
-button {
-    background-color: #dd0000;
-    border-radius: 20px;
-    color: #fff;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 10px 20px;
+  .accept-button {
+    background-color: #1E90FF;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin-right: 40px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-}
+  }
 
-.conf {
-    background-color: rgb(111, 219, 2);
-}
-.rech {
-    background-color: #d80000;
-}
-button:hover {
-    background-color: #0020c3;
-}
+  .reject-button {
+    background-color: transparent;
+    color: #1E90FF;
+    border: 2px solid #1E90FF;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+  }
+
+  h2, p, .button-container {
+    text-align: center; /* Centra el contenido */
+  }
