--- a/gestion_voluntarios/view/notificacion.html
+++ b/gestion_voluntarios/view/notificacion.html
@@ -1,11 +1,11 @@
 {% load static %}
 {% block content %}
-    <!doctype html>
+    <!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Notificación de emergencia médica</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -13,27 +13,33 @@
         <!-- Bootstrap Font Icon CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <!-- My Styles -->
+        <link
         <link rel="stylesheet" href="{% static 'notificacion_styles.css' %}">
+        <title>Notificaciones</title>
     </head>
     <body>
-    <div class="notification">
-        {% for em in emergencia %}
-            <h1>EMERGENCIA MÉDICA</h1>
-            <b>{{ em.nombre }}</b>
+    {% for emergencia in emergencias %}
+        <div class="notification">
+
+            <h2><b>{{ emergencia.nombre }}</b></h2>
             <br>
-            Asunto: {{ em.asunto }}
+            Asunto: {{ emergencia.asunto }}
             <br>
-            Dirección: {{ em.ubicacion }}
-            <form method="post" action="{% url 'voluntario' %}?id_voluntario=4">
-                {% csrf_token %}
-                <input type="hidden" id="id_voluntario" name="id_voluntario" value="{{ voluntario.id }}">
-                <input type="hidden" id="confirmacion" name="confirmacion" value="confirmar">
-                <button type="submit" name="confirmacion" class="conf" value="confirmar">Confirmar</button>
-                <input type="hidden" id="rechazo" name="rechazo" value="rechazar">
-                <button type="submit" name="rexhazo" class="rech" value="rechazar">Rechazar</button>
-            </form>
-        {% endfor %}
-    </div>
+            Dirección: {{ emergencia.ubicacion }}
+            <div class="button-container">
+                <form method="post" action="{% url 'voluntario' %}?id_voluntario={{ voluntario.id }}">
+                    {% csrf_token %}
+                    <input type="hidden" id="id_voluntario" name="id_voluntario" value="{{ voluntario.id }}">
+                    <input type="hidden" id="confirmacion" name="confirmacion" value="confirmar">
+                    <button type="submit" name="confirmacion" class="accept-button" value="confirmar">Confirmar</button>
+                    <input type="hidden" id="rechazo" name="rechazo" value="rechazar">
+                    <button type="submit" name="rexhazo" class="reject-button" value="rechazar">Rechazar</button>
+                </form>
+            </div>
+
+
+        </div>
+    {% endfor %}
     </body>
     </html>
 {% endblock %}
