--- a/gestion_voluntarios/view/notificacion.html
+++ b/gestion_voluntarios/view/notificacion.html
@@ -27,14 +27,15 @@
             <br>
             Dirección: {{ emergencia.ubicacion }}
             <div class="button-container">
-                <form method="post" action="{% url 'voluntario' %}?id_voluntario={{ voluntario.id }}">
+                <form method="post" name="" action="{% url 'confirmar_emergencia' %}">
                     {% csrf_token %}
                     <input type="hidden" id="id_voluntario" name="id_voluntario" value="{{ voluntario.id }}">
+
                     <input type="hidden" id="confirmacion" name="confirmacion" value="confirmar">
-                    <button type="submit" name="confirmacion" class="accept-button" value="confirmar">Confirmar</button>
-                    <input type="hidden" id="rechazo" name="rechazo" value="rechazar">
-                    <button type="submit" name="rexhazo" class="reject-button" value="rechazar">Rechazar</button>
+                    <button type="submit" class="accept-button" value="confirmar">Confirmar</button>
                 </form>
+                <input type="hidden" id="confirma" name="confirma" value="rechazar">
+                <button type="submit" class="reject-button" value="rechazar">Rechazar</button>
             </div>
 
 
